Changed overflow-x to hidden on html for mobile and tablet screens to remove white space bug

--- a/assets/style.css
+++ b/assets/style.css
@@ -204,7 +204,6 @@ header h1 {
     border: none;
 }
 
-
 button a {
     text-decoration: none;
     text-transform: uppercase;
@@ -217,6 +216,7 @@ button a {
 
 #classes {
     height: 2000px;
+    width: 100%;
     background-color: #FFF3B0;
     display: flex;
     flex-direction: column;
@@ -313,7 +313,11 @@ button a {
 /*-------------Media Queries-------------*/
 
 @media (min-width: 480px) and (max-width: 798px) {
-    
+    /*General*/
+    html {
+        overflow-x: hidden;
+    }
+
     /*Header*/
     #header-background {
         height: 300px;
@@ -416,12 +420,15 @@ button a {
         margin-top: 60px;
         font-weight: 700;
     }
-
-    #classes-wrapper:
 }
 
 @media (min-width: 798px) and (max-width: 1024px) {
     
+    /*General*/
+    html {
+        overflow-x: hidden;
+    }
+
     /*Header*/
     header {
         height: 700px;
